--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
         <header class="chatlist-header">
           <div title="Você" class="container-header-you">
             <img src="./image/user-3296.svg" alt="" />
-            <p class="your-name-header">Pablo Almeida</p>
+            <p id="your-name-header" class="your-name-header">Nome do Usuário</p>
           </div>
           <span class="material-icons" title="Nova conversa" style="margin: 0">
             add
