--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webchat</title>
 
-    <link rel="stylesheet" href="styles/chat.css" />
+    <link rel="stylesheet" href="../styles/chat.css" />
 
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -82,7 +82,7 @@
         <p class="text-start">Envie e receba mensagens para seus amigos.</p>
       </section>
       <script src="/socket.io/socket.io.js"></script>
-      <script src="/scripts/chat.js" type="module"></script>
+      <script src="../scripts/chat.js" type="module"></script>
     </main>
   </body>
 </html>
