--- a/views/register.html
+++ b/views/register.html
@@ -23,7 +23,7 @@
               id="username-input"
               class="text-input"
               type="text"
-              name="number"
+              name="name"
               required
             />
           </div>
@@ -35,7 +35,7 @@
               id="number-input"
               class="text-input"
               type="text"
-              name="number"
+              name="login"
               required
             />
           </div>
