--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -144,6 +144,19 @@ body {
   transition: 200ms ease-in-out 0s;
 }
 
+.side-contacts li {
+  width: 100%;
+  height: 70px;
+  border-bottom: 0.5px solid rgb(51, 51, 51);
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  background-color: #111b21;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
 li:hover {
   background-color: rgb(34, 41, 45);
 }
@@ -471,7 +484,6 @@ img {
   padding-bottom: 10px;
   cursor: pointer;
   transition: background 200ms;
-
 }
 
 .container-more-options li:hover {
