--- a/src/public/styles/chat.css
+++ b/src/public/styles/chat.css
@@ -17,7 +17,7 @@ body {
 /* Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: #1f2c33 #111b21;
+  scrollbar-color: rgb(33, 33, 33) rgb(33, 33, 33);
 }
 
 /* Chrome, Edge, and Safari */
@@ -26,11 +26,11 @@ body {
 }
 
 *::-webkit-scrollbar-track {
-  background: #111b21;
+  background: rgb(33, 33, 33);
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #1f2c33;
+  background-color: rgb(33, 33, 33);
   border-radius: 10px;
 }
 
@@ -44,7 +44,7 @@ body {
 }
 
 .block-messages {
-  background-color: #111b21;
+  background-color: rgb(33, 33, 33);
   width: 30vw;
   min-width: 300px;
   height: 100vh;
@@ -54,11 +54,11 @@ body {
 }
 
 .chat-selected {
-  background-color: rgb(41, 50, 55) !important;
+  background-color: rgb(60 60 60) !important;
 }
 
 #search-icon {
-  background-color: #1f2c33;
+  background-color: rgb(25, 25, 25);
   padding-top: 0;
   padding-bottom: 0;
   padding-left: 15px;
@@ -81,7 +81,7 @@ body {
 
 .container-search-chat input {
   height: 70%;
-  background-color: #1f2c33;
+  background-color: rgb(25, 25, 25);
   border: none;
   outline: none;
   width: 100%;
@@ -92,11 +92,11 @@ body {
 }
 
 .container-search-chat input::placeholder {
-  color: #8696a0;
+  color: #818181;
 }
 
 .container-search-chat .material-icons {
-  color: #8696a0;
+  color: #818181;
   padding: 5px;
   cursor: pointer;
   border-radius: 100%;
@@ -107,10 +107,10 @@ body {
 .chatlist-header {
   display: flex;
   align-items: center;
-  height: 60px;
+  height: 55px;
   border-bottom: 0.5px solid rgb(51, 51, 51);
   justify-content: space-between;
-  background-color: #1f2c33;
+  background-color: rgb(33, 33, 33);
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
@@ -136,7 +136,7 @@ body {
   display: flex;
   justify-content: space-between;
   cursor: pointer;
-  background-color: #111b21;
+  background-color: rgb(33, 33, 33);
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
@@ -151,14 +151,14 @@ body {
   display: flex;
   justify-content: space-between;
   cursor: pointer;
-  background-color: #111b21;
+  background-color: rgb(33, 33, 33);
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
 }
 
 li:hover {
-  background-color: rgb(34, 41, 45);
+  background-color: rgb(39, 39, 39);
 }
 
 li > div {
@@ -176,6 +176,7 @@ li > div {
   align-items: center;
   justify-content: start;
   margin-right: 10px;
+  position: relative;
 }
 
 .name-user {
@@ -192,7 +193,7 @@ li > div {
 
 .time-stamp {
   font-size: 0.7rem;
-  color: #8696a0;
+  color: #818181;
   margin-right: 10px;
   max-width: 25px;
   overflow: hidden;
@@ -223,7 +224,7 @@ img {
 .conversation {
   width: 70%;
   height: 100vh;
-  background-color: rgb(54, 65, 71);
+  background-color: rgb(40, 40, 40);
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -246,11 +247,11 @@ img {
 }
 
 .conversation-header {
-  height: 60px;
-  min-height: 60px;
+  height: 55px;
+  min-height: 55px;
   width: 100%;
   border-bottom: 0.5px solid rgb(51, 51, 51);
-  background-color: #1f2c33;
+  background-color: rgb(33, 33, 33);
   display: flex;
   align-items: center;
   z-index: 5;
@@ -287,10 +288,9 @@ img {
 }
 
 .conversation-panel-messages {
-  height: calc(100% - 140px);
+  height: calc(100% - 135px);
   width: 100%;
-  /* background-image: url(../image/backgroundChat.png); */
-  background-color: #131e25;
+  background-color: #181919;
   background-position: left top;
   background-size: auto;
   background-repeat: repeat;
@@ -304,7 +304,7 @@ img {
 .conversation-input-area {
   height: 60px;
   width: 100%;
-  background-color: #1f2c33;
+  background-color: rgb(33, 33, 33);
   display: flex;
   align-items: center;
   -webkit-user-select: none; /* Safari */
@@ -315,7 +315,7 @@ img {
 .conversation-input {
   width: 100%;
   height: 30px;
-  background-color: #111b21;
+  background-color: rgb(25 25 25);
   margin-right: 5px;
   border-radius: 10px;
   border: none;
@@ -356,7 +356,7 @@ img {
 }
 
 .self-message {
-  background-color: #015c4b;
+  background-color: #5865f2;
   border-radius: 10px 10px 0px 10px;
 }
 
@@ -365,7 +365,7 @@ img {
   width: fit-content;
   padding: 10px;
   margin-top: 10px;
-  font-size: 0.9rem;
+  font-size: 0.84rem;
   word-break: break-all;
 }
 
@@ -377,13 +377,13 @@ img {
 }
 
 .they-message {
-  background-color: #1f2c33;
+  background-color: #474b4d;
   border-radius: 10px 10px 10px 0px;
 }
 
 .section-contacts {
   position: fixed;
-  background-color: #111b21;
+  background-color: rgb(33, 33, 33);
   width: 30vw;
   min-width: 300px;
   height: 100vh;
@@ -397,7 +397,7 @@ img {
 }
 
 #side-search-icon {
-  background-color: #1f2c33;
+  background-color: rgb(25, 25, 25);
   padding-top: 0;
   padding-bottom: 0;
   padding-left: 15px;
@@ -423,7 +423,7 @@ img {
   height: 108px;
   border-bottom: 0.5px solid rgb(51, 51, 51);
   justify-content: space-between;
-  background-color: #1f2c33;
+  background-color: rgb(33, 33, 33);
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
@@ -432,7 +432,7 @@ img {
 #side_arrow_back {
   color: #d9dee0;
   display: flex;
-  background-color: #1f2c33;
+  background-color: rgb(33, 33, 33);
   padding-top: 0;
   padding-bottom: 0;
   padding-left: 15px;
@@ -462,24 +462,33 @@ img {
   position: relative;
 }
 
-.container-more-options ul {
+.overlay_menu_options {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  z-index: 50;
+}
+
+.overlay_menu_options ul {
   position: absolute;
-  background: #233138;
+  background: #252525;
   width: 13rem;
   height: max-content;
   list-style: none;
   padding-top: 10px;
   padding-bottom: 10px;
-  left: -177px;
   color: white;
   font-size: 15px;
   border-radius: 3px;
   box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
   transition: all 200ms;
-  display: none;
+  left: 14%;
+  top: 47px;
 }
 
-.container-more-options li {
+.overlay_menu_options li {
   padding-left: 14px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -487,6 +496,40 @@ img {
   transition: background 200ms;
 }
 
-.container-more-options li:hover {
-  background: #182229;
+.menu_option li:hover {
+  background: #464646 !important;
+}
+
+.overlay-add-contact {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+}
+
+.menu-add-contact {
+  box-shadow: rgb(0 0 0 / 75%) 0px 5px 15px;
+  background-color: #182229;
+  height: 95vh;
+  width: 95vw;
+  border-radius: 8px;
+}
+
+.status-contact {
+  border: solid 2px #ffffff;
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border-radius: 100%;
+  bottom: 5px;
+  right: 6px;
+  background: #000000;
+}
+
+.online {
+  background: #0ac60a;
 }
