--- a/src/views/index.html
+++ b/src/views/index.html
@@ -27,15 +27,19 @@
             id="new-chat"
             class="material-icons"
             title="Nova conversa"
-            style="margin: 0"
+            style="margin: 0; font-size: 21px"
           >
-            add
+            chat
           </span>
           <div class="container-more-options">
             <span id="more_vert" class="material-icons" title="Mais opções">
               more_vert
             </span>
-            <ul id="menu_option">
+          </div>
+          <div id="overlay_menu_option" class="overlay_menu_options">
+            <ul id="menu_option" class="menu_option">
+              <li id="new-contact-button">Adicionar Contato</li>
+              <li id="new-group-button">Novo grupo</li>
               <li id="desconnect-button">Desconectar</li>
             </ul>
           </div>
@@ -85,6 +89,10 @@
         <h1>Converse</h1>
         <p class="text-start">Envie e receba mensagens para seus amigos.</p>
       </section>
+
+      <!-- <div class="overlay-add-contact">
+        <div class="menu-add-contact"></div>
+      </div> -->
       <script src="../scripts/socket.io/client-dist/socket.io.js"></script>
       <script src="../scripts/chat.js" type="module"></script>
     </main>
