Evento digitando adicionado

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -46,7 +46,7 @@
           <div id="overlay_menu_option" class="overlay_menu_options">
             <ul id="menu_option" class="menu_option">
               <li id="new-group-button">Novo grupo</li>
-              <li id="desconnect-button">Desconectar</li>
+              <li id="disconnect-button">Desconectar</li>
             </ul>
           </div>
         </header>
