Iniciandi nova release

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -98,7 +98,61 @@
             style="margin-right: 3%"
           />
         </div>
+        <div class="container_novo_grupo">
+          <ul>
+            <li id="new_group" class="new_group">
+              <div>
+                <div class="new-group-image">
+                  <img src="../image/group_add_black_24dp.svg" />
+                </div>
+                <div class="contact-info">
+                  <div class="name-user">Novo grupo</div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
         <ul id="side-contacts" class="side-contacts"></ul>
+      </section>
+
+      <section id="section-new-group" class="section-new-group">
+        <header class="contactslist-header">
+          <div class="container-side-title">
+            <span id="new_chat_arrow_back" class="material-icons">
+              arrow_back
+            </span>
+            <h1 style="white-space: nowrap; font-weight: 400">
+              Adicionar participantes ao grupo
+            </h1>
+          </div>
+        </header>
+        <div
+          id="container_contact_to_new_group"
+          class="container_contact_to_new_group"
+        >
+          <ul>
+            <li>
+              <img src="../image/user-3296.svg" alt="" />
+              <div class="name_choosed_contact">Fulano de tal</div>
+              <span class="material-icons"> close </span>
+            </li>
+            <li>
+              <img src="../image/user-3296.svg" alt="" />
+              <div class="name_choosed_contact">Fulano de tal</div>
+              <span class="material-icons"> close </span>
+            </li>
+          </ul>
+        </div>
+        <div class="container-search-new-group">
+          <input
+            title="Caixa de texto de pesquisa"
+            type="text"
+            placeholder="Digite o nome do contato"
+            style="margin-right: 6%; margin-left: 6%"
+          />
+        </div>
+
+        <ul class="side-contacts"></ul>
       </section>
 
       <section id="new-contact-div" class="left-side-menu">
