Feature - Pesquisar por contato

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -92,6 +92,7 @@
         <div class="container-search-chat">
           <span id="side-search-icon" class="material-icons"> search </span>
           <input
+            id="input_search_contacts"
             title="Caixa de texto de pesquisa"
             type="text"
             placeholder="Pesquisar contatos"
@@ -99,6 +100,7 @@
           />
         </div>
         <div class="container_novo_grupo">
+          <ul id="container_search_contacts" class="container_search_chat"></ul>
           <ul>
             <li id="new_group" class="new_group">
               <div>
@@ -121,9 +123,7 @@
             <span id="new_chat_arrow_back" class="material-icons">
               arrow_back
             </span>
-            <h1 style="white-space: nowrap; font-weight: 400">
-              Adicionar participantes ao grupo
-            </h1>
+            <h1 style="font-weight: 400">Adicionar participantes ao grupo</h1>
           </div>
         </header>
         <div
